Add debug for java 21 error